--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = atmelavr
 framework = arduino
 board = nanoatmega328
 lib_deps =
-  martin2250/ADCTouch
+  # martin2250/ADCTouch
   rocketscream/Low-Power
   ; bhagman/SoftPWM
 monitor_baud = 115200
