switching to FadeLED

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,6 @@ board = nanoatmega328
 lib_deps =
   # martin2250/ADCTouch
   rocketscream/Low-Power
+  septillion-git/FadeLed @ ~1.6.0
   ; bhagman/SoftPWM
 monitor_baud = 115200
