car trigger fixed

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,4 @@ lib_deps =
   rocketscream/Low-Power
   septillion-git/FadeLed @ ~1.6.0
   ; bhagman/SoftPWM
-monitor_baud = 115200
+monitor_speed = 115200
