--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,6 @@ board = nanoatmega328
 lib_deps =
   # martin2250/ADCTouch
   rocketscream/Low-Power
-  septillion-git/FadeLed @ ~1.6.0
+  ; septillion-git/FadeLed @ ~1.6.0
   ; bhagman/SoftPWM
 monitor_speed = 115200
