--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,6 @@ lib_deps =
   # martin2250/ADCTouch
   rocketscream/Low-Power
   septillion-git/FadeLed @ ~1.6.0
+  thomasfredericks/Bounce2
   ; bhagman/SoftPWM
 monitor_speed = 115200
